feat: remove unnecessary api routes
