# apps/api/openapi.yaml
@@ -588,24 +588,6 @@ components:
         - investmentPayments
         - message
       type: object
-    GetLikeCountOutputBody:
-      additionalProperties: false
-      properties:
-        $schema:
-          description: A URL to the JSON Schema for this object.
-          example: https://example.com/schemas/GetLikeCountOutputBody.json
-          format: uri
-          readOnly: true
-          type: string
-        count:
-          format: int64
-          type: integer
-        message:
-          type: string
-      required:
-        - count
-        - message
-      type: object
     GetOffsetPaginatedBusinessMembersOutputBody:
       additionalProperties: false
       properties:
@@ -708,24 +690,6 @@ components:
           type: string
       required:
         - return_url
-      type: object
-    ImpressionCountOutputBody:
-      additionalProperties: false
-      properties:
-        $schema:
-          description: A URL to the JSON Schema for this object.
-          example: https://example.com/schemas/ImpressionCountOutputBody.json
-          format: uri
-          readOnly: true
-          type: string
-        count:
-          format: int64
-          type: integer
-        message:
-          type: string
-      required:
-        - count
-        - message
       type: object
     Industry:
       additionalProperties: false
@@ -869,23 +833,6 @@ components:
           type: string
       required:
         - clientSecret
-        - message
-      type: object
-    IsFavouritedOutputBody:
-      additionalProperties: false
-      properties:
-        $schema:
-          description: A URL to the JSON Schema for this object.
-          example: https://example.com/schemas/IsFavouritedOutputBody.json
-          format: uri
-          readOnly: true
-          type: string
-        favourited:
-          type: boolean
-        message:
-          type: string
-      required:
-        - favourited
         - message
       type: object
     MessageResponse:
@@ -1393,359 +1340,6 @@ paths:
       tags:
         - Accounts
         - Businesses
-  /analytic/businesses/impressions:
-    post:
-      description: Create a business impression.
-      operationId: create-business-impression
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/MessageResponse"
-          description: OK
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      security:
-        - bearerAuth: []
-      summary: Create a business impression
-      tags:
-        - Analytic
-        - Businesses
-  /analytic/businesses/{id}/favourite:
-    delete:
-      description: Delete a business favourite.
-      operationId: delete-business-favourite
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            format: int64
-            minimum: 1
-            type: integer
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/MessageResponse"
-          description: OK
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      security:
-        - bearerAuth: []
-      summary: Delete a business favourite
-      tags:
-        - Analytic
-        - Businesses
-        - Favourites
-    get:
-      description: Get a business favourite status.
-      operationId: get-business-favourite-status
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            format: int64
-            minimum: 1
-            type: integer
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/IsFavouritedOutputBody"
-          description: OK
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      security:
-        - bearerAuth: []
-      summary: Get a business favourite status
-      tags:
-        - Analytic
-        - Businesses
-        - Favourites
-    post:
-      description: Create a business favourite.
-      operationId: create-business-favourite
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            format: int64
-            minimum: 1
-            type: integer
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/MessageResponse"
-          description: OK
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      security:
-        - bearerAuth: []
-      summary: Create a business favourite
-      tags:
-        - Analytic
-        - Businesses
-        - Favourites
-  /analytic/businesses/{id}/favourites:
-    get:
-      description: Get a business favourite count.
-      operationId: get-business-favourite-count
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            format: int64
-            minimum: 1
-            type: integer
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/GetLikeCountOutputBody"
-          description: OK
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      summary: Get a business favourite count
-      tags:
-        - Analytic
-        - Businesses
-        - Favourites
-  /analytic/businesses/{id}/impressions:
-    get:
-      description: Get a business impression count.
-      operationId: get-business-impression-count
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            format: int64
-            minimum: 1
-            type: integer
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ImpressionCountOutputBody"
-          description: OK
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      summary: Get a business impression count
-      tags:
-        - Analytic
-        - Businesses
-  /analytic/rounds/favourites:
-    post:
-      description: Create a round favourite.
-      operationId: create-round-favourite
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            format: int64
-            minimum: 1
-            type: integer
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/MessageResponse"
-          description: OK
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      security:
-        - bearerAuth: []
-      summary: Create a round favourite
-      tags:
-        - Analytic
-        - Rounds
-        - Favourites
-  /analytic/rounds/impressions:
-    post:
-      description: Create a round impression.
-      operationId: create-round-impression
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/MessageResponse"
-          description: OK
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      security:
-        - bearerAuth: []
-      summary: Create a round impression
-      tags:
-        - Analytic
-        - Rounds
-  /analytic/rounds/{id}/favourite:
-    delete:
-      description: Delete a round favourite.
-      operationId: delete-round-favourite
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            format: int64
-            minimum: 1
-            type: integer
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/MessageResponse"
-          description: OK
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      security:
-        - bearerAuth: []
-      summary: Delete a round favourite
-      tags:
-        - Analytic
-        - Rounds
-        - Favourites
-    get:
-      description: Get a round favourite status.
-      operationId: get-round-favourite-status
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            format: int64
-            minimum: 1
-            type: integer
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/IsFavouritedOutputBody"
-          description: OK
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      security:
-        - bearerAuth: []
-      summary: Get a round favourite status
-      tags:
-        - Analytic
-        - Rounds
-        - Favourites
-  /analytic/rounds/{id}/favourites:
-    get:
-      description: Get a round favourite count.
-      operationId: get-round-favourite-count
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            format: int64
-            minimum: 1
-            type: integer
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/GetLikeCountOutputBody"
-          description: OK
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      summary: Get a round favourite count
-      tags:
-        - Analytic
-        - Rounds
-        - Favourites
-  /analytic/rounds/{id}/impressions:
-    get:
-      description: Get a round impression count.
-      operationId: get-round-impression-count
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            format: int64
-            minimum: 1
-            type: integer
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ImpressionCountOutputBody"
-          description: OK
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      summary: Get a round impression count
-      tags:
-        - Analytic
-        - Rounds
   /business:
     post:
       description: Create a business.
